--- a/public/css/master.scss
+++ b/public/css/master.scss
@@ -7,7 +7,7 @@ body {
   font-family:Georgia;
   font-family: 'Marmelad', sans-serif;
   font-size:12px;
-  background:url(/images/wood-wallpaper.jpg) repeat fixed;
+  background:url(images/wood-wallpaper.jpg) repeat fixed;
   padding-bottom:30px;
   color:#444;
 }
@@ -38,12 +38,12 @@ input::-webkit-input-placeholder { color:#FFE8CC }
 }
 
 #thin_strip {
-  background:url(/images/thin_strip.png) repeat-x;
+  background:url(images/thin_strip.png) repeat-x;
   height:2px;
 }
 
 #header {
-  background:url(/images/header_bg.png) repeat-x;
+  background:url(images/header_bg.png) repeat-x;
   height:60px;
   .inner {
     width:844px;
@@ -71,7 +71,7 @@ input::-webkit-input-placeholder { color:#FFE8CC }
   float:right;
   width:204px;
   height:38px;
-  background:url(/images/search_box_bg.png) no-repeat;
+  background:url(images/search_box_bg.png) no-repeat;
   
   #search {
     background:none;
@@ -93,13 +93,13 @@ input::-webkit-input-placeholder { color:#FFE8CC }
     float:left;
     margin-left:6px;
     .left {
-      background:url(/images/blog_title_left.png) no-repeat;
+      background:url(images/blog_title_left.png) no-repeat;
       padding-left:14px;
     }
     .title {
       font-weight:normal;
       font-size:27px;
-      background:url(/images/blog_title_center.png) repeat-x;
+      background:url(images/blog_title_center.png) repeat-x;
       text-align:center;
       line-height:63px;
       text-shadow:0 1px 3px #111;
@@ -110,7 +110,7 @@ input::-webkit-input-placeholder { color:#FFE8CC }
       }
     }
     .right {
-      background:url(/images/blog_title_right.png) no-repeat bottom right;
+      background:url(images/blog_title_right.png) no-repeat bottom right;
       padding-right:15px;
     }
   } 
@@ -125,15 +125,15 @@ input::-webkit-input-placeholder { color:#FFE8CC }
   float:left;
   width:642px;
   .top {
-    background:url(/images/entry_col_bg.png) no-repeat;
+    background:url(images/entry_col_bg.png) no-repeat;
     padding-top:55px;
   }
   .middle {
-    background:url(/images/entry_column_middle_bg.png) repeat-y;
+    background:url(images/entry_column_middle_bg.png) repeat-y;
     padding:1px 50px;
   }
   .bottom {
-    background:url(/images/entry_col_bottom_bg.png) no-repeat;
+    background:url(images/entry_col_bottom_bg.png) no-repeat;
     padding-bottom:73px;
   }
   .entry {
@@ -146,7 +146,7 @@ input::-webkit-input-placeholder { color:#FFE8CC }
       height:64px;
       padding-top:4px;
       text-align:center;
-      background:url(/images/calendar.png) no-repeat;
+      background:url(images/calendar.png) no-repeat;
       .month {
         color:#fff;
         text-transform:uppercase;
@@ -171,7 +171,7 @@ input::-webkit-input-placeholder { color:#FFE8CC }
       margin-top:10px;
       text-shadow:0 1px 1px #444;
       box-shadow:0 1px 0 #eaf4ff inset;
-      background:url(/images/chat_blue.png) repeat-x bottom left #3da6ff;
+      background:url(images/chat_blue.png) repeat-x bottom left #3da6ff;
       border:1px solid #0d3a64;
       padding:2px 0;
     }
@@ -188,13 +188,22 @@ input::-webkit-input-placeholder { color:#FFE8CC }
       img {
         padding:4px;
         border-radius:3px;
-        background:#eee;
+        background:#fff;
         border:1px solid #ccc;
         box-shadow:0 3px 5px -3px #555;
         max-width:100%;
       }
     }
   }
+}
+
+.post_type_icon {
+  img {
+    margin:10px auto;
+    display:none;
+  }
+  
+  
 }
 
 .conversation {
@@ -209,13 +218,13 @@ input::-webkit-input-placeholder { color:#FFE8CC }
   .odd {
     float:left;
     box-shadow:0 1px 0 #f0ffd2 inset;
-    background:url(/images/chat_green.png) repeat-x bottom left #94c626;
+    background:url(images/chat_green.png) repeat-x bottom left #94c626;
     border:1px solid #48580a;
   }
   .even {
     float:right;
     box-shadow:0 1px 0 #eaf4ff inset;
-    background:url(/images/chat_blue.png) repeat-x bottom left #3da6ff;
+    background:url(images/chat_blue.png) repeat-x bottom left #3da6ff;
     border:1px solid #0d3a64;
   } 
 }
@@ -237,12 +246,12 @@ ol.notes {
     margin-top:6px;
   }
   
-  #askme_wrapper {
+  #askme_wrapper, #follow_wrapper {
     box-shadow:0px 9px 8px -2px #111;
   }
   
-  #askme {
-    background:url(/images/ask_bg.jpg) repeat-x left bottom #54b0ff;
+  #askme, #follow {
+    background:url(images/ask_bg.jpg) repeat-x left bottom #54b0ff;
     padding:5px 25px;
     text-align:center;
     display:inline-block;
@@ -278,7 +287,7 @@ ol.notes {
     float:left; 
     .tag { 
       float:left;
-      background:url(/images/tag_bg.png) repeat-x #94c626 left bottom; 
+      background:url(images/tag_bg.png) repeat-x #94c626 left bottom; 
       padding:3px 7px; 
       border-radius:4px;
       border:1px solid #48580a;
