--- a/public/css/master.scss
+++ b/public/css/master.scss
@@ -268,6 +268,16 @@ ol.notes {
     box-shadow:0 1px 1px #d7f3ff inset;
     text-shadow:0 1px 1px #111;
   }
+  
+  #polaroid {
+    background(images/polaroid.png) no-repeat;
+    width:146px;
+    height:166px;
+    img {
+      margin-top:9px;
+      margin-left:9px;
+    }
+  }
 }
 
 .quote {
