--- a/public/css/master.css
+++ b/public/css/master.css
@@ -233,13 +233,13 @@ ol.notes li {
     background: url(images/polaroid.png) no-repeat top center;
     width: 146px;
     height: 166px;
-    margin: 0 auto; }
+    margin: 5px auto 0;
+    padding-top: 7px; }
     #profile_picture_column #polaroid .inner {
-      margin: 7px auto 0;
+      margin: 0 auto;
       width: 128px;
       height: 128px;
-      overflow: hidden;
-      box-shadow: 0 1px 1px 2px #222; }
+      overflow: hidden; }
 
 .quote {
   margin-top: 0 !important;
