--- a/public/css/master.scss
+++ b/public/css/master.scss
@@ -280,6 +280,8 @@ ol.notes {
       width:128px;
       height:128px;
       overflow:hidden;
+      position:relative;
+      .shadow { box-shadow:0 1px 2px 2px #444 inset }
     }
   }
 }
