--- a/public/css/master.css
+++ b/public/css/master.css
@@ -242,7 +242,13 @@ ol.notes li {
       overflow: hidden;
       position: relative; }
       #profile_picture_column #polaroid .inner .shadow {
-        box-shadow: 0 1px 2px 2px #444 inset; }
+        box-shadow: 0 1px 2px 2px #444 inset;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 128px;
+        height: 128px;
+        z-index: 10; }
 
 .quote {
   margin-top: 0 !important;
