--- a/public/css/master.scss
+++ b/public/css/master.scss
@@ -281,7 +281,14 @@ ol.notes {
       height:128px;
       overflow:hidden;
       position:relative;
-      .shadow { box-shadow:0 1px 2px 2px #444 inset }
+      .shadow { 
+        box-shadow:0 1px 2px 2px #444 inset; 
+        position:absolute; 
+        top:0; left:0; 
+        width:128px; 
+        height:128px;
+        z-index:10;
+      }
     }
   }
 }
