--- a/public/css/master.scss
+++ b/public/css/master.scss
@@ -291,6 +291,13 @@ ol.notes {
       }
     }
   }
+  
+  #description {
+    margin:0 auto;
+    width:146px;
+    text-shadow:0 1px 1px #111;
+    color:#fff;
+  }
 }
 
 .quote {
