--- a/public/css/master.scss
+++ b/public/css/master.scss
@@ -276,11 +276,10 @@ ol.notes {
   }
   
   #description {
-    margin:0 auto;
-    width:142px;
+    margin:0 auto 10px;
     text-shadow:0 1px 1px #111;
     color:#fff;
-    line-height:18px;
+    line-height:16px;
   }
 }
 
