--- a/public/css/master.css
+++ b/public/css/master.css
@@ -216,7 +216,7 @@ ol.notes li {
     background: url(images/polaroid.png) no-repeat top center;
     width: 146px;
     height: 166px;
-    margin: 5px auto 0;
+    margin: 5px 0 0 -2px;
     padding-top: 7px; }
     #profile_picture_column #polaroid .inner {
       margin: 0 auto;
@@ -233,7 +233,7 @@ ol.notes li {
         height: 128px;
         z-index: 10; }
   #profile_picture_column #description {
-    margin: 0 auto 10px;
+    margin: 0 auto 15px;
     text-shadow: 0 1px 1px #111;
     color: #fff;
     line-height: 16px; }
@@ -297,9 +297,9 @@ ol.notes li {
     float: left;
     margin-left: 10px; }
   #footer #copyright {
-    margin-left: 170px;
     color: #fff;
     text-shadow: 0 1px 1px #111;
+    text-align: center;
     height: 36px;
     line-height: 36px; }
     #footer #copyright a {
