--- a/public/css/master.css
+++ b/public/css/master.css
@@ -267,14 +267,14 @@ ol.notes li {
     .tags_section .tags_list .tag {
       float: left;
       background: url(images/tag_bg.png) repeat-x #94c626 left bottom;
-      padding: 3px 7px;
+      padding: 2px 6px;
       border-radius: 4px;
       border: 1px solid #48580a;
       color: #fff;
       display: inline-block;
       box-shadow: 0 1px 0 #f0ffd2 inset;
-      margin-right: 10px;
-      margin-bottom: 10px; }
+      margin: 0 10px 10px 0;
+      font-size: 10px; }
 
 .AUDIO_info_float {
   margin-top: 10px; }
