--- a/public/css/master.scss
+++ b/public/css/master.scss
@@ -267,7 +267,8 @@ ol.notes {
       .shadow { 
         box-shadow:0 1px 3px -1px #111 inset;
         position:absolute; 
-        top:0; left:0; 
+        top:0; 
+        left:0; 
         width:128px; 
         height:128px;
         z-index:10;
@@ -308,14 +309,14 @@ ol.notes {
     .tag { 
       float:left;
       background:url(images/tag_bg.png) repeat-x #94c626 left bottom; 
-      padding:3px 7px; 
+      padding:2px 6px; 
       border-radius:4px;
       border:1px solid #48580a;
       color:#fff;
       display:inline-block;
       box-shadow:0 1px 0 #f0ffd2 inset;
-      margin-right:10px;
-      margin-bottom:10px;
+      margin:0 10px 10px 0;
+      font-size:10px;
     }
   }
 }
