--- a/public/css/master.css
+++ b/public/css/master.css
@@ -119,7 +119,8 @@ input::-webkit-input-placeholder {
     padding-bottom: 73px; }
   #entries_column .entry .west {
     float: left;
-    width: 64px; }
+    width: 54px;
+    text-align: center; }
   #entries_column .entry .calendar {
     width: 54px;
     height: 64px;
@@ -139,14 +140,13 @@ input::-webkit-input-placeholder {
     margin: 10px auto 0;
     display: block; }
   #entries_column .entry .note_count {
-    display: block;
+    display: inline-block;
     width: 100%;
     overflow: hidden;
     margin-top: 10px;
-    text-align: center;
-    padding: 2px 0;
+    padding: 2px 10px;
     border-radius: 20px;
-    background: #777;
+    background: #888;
     color: #fff;
     font-size: 10px; }
   #entries_column .entry .content {
