--- a/public/css/master.scss
+++ b/public/css/master.scss
@@ -139,7 +139,8 @@ input::-webkit-input-placeholder { color:#FFE8CC }
   .entry {
     .west {
       float:left;
-      width:64px;
+      width:54px;
+      text-align:center;
     }
     .calendar  {
       width:54px;
@@ -164,14 +165,13 @@ input::-webkit-input-placeholder { color:#FFE8CC }
       display:block;
     }
     .note_count {
-      display:block;
+      display:inline-block;
       width:100%;
       overflow:hidden;
       margin-top:10px;
-      text-align:center;
-      padding:2px 0;
+      padding:2px 10px;
       border-radius:20px;
-      background:#777;
+      background:#888;
       color:#fff;
       font-size:10px;
     }
