--- a/public/css/master.css
+++ b/public/css/master.css
@@ -255,7 +255,9 @@ ol.notes li {
 .tags_section {
   margin-top: 20px;
   background: url(images/tag.png) no-repeat;
-  padding-left: 24px; }
+  padding: 1px 0 1px 24px; }
+  .tags_section a {
+    color: #444; }
 
 .AUDIO_info_float {
   margin-top: 10px; }
